# lab

./: LICENSE  README.md
C/: add_via_sub.c  argv-quoting.c  utf8_parser.c  utf8_parser.h  utf_parser
CPP/: ternary_assignment
Elixir/composition/: mix.exs
Elixir/composition/lib/: composition.ex
Elixir/harikari_genserver/lib/: harikari.ex
Go/: daisy_chain_primes.go
JS/flow_implicit_any/: README.md  index.js
JS/transitive_deps_npm/: index.js
Rust/cycle_and_fuse/src/: main.rs
Rust/extension_traits/: Cargo.toml
Rust/mandelbrot/: Cargo.toml
Rust/mandelbrot/src/: main.rs
c/: add_via_sub.c  logical_or.c  raii.c  struct_packing.c
cpp/: ternary_assignment.cpp
elixir/composition/: .gitignore
elixir/composition/config/: config.exs
elixir/composition/test/: composition_test.exs
elixir/harikari_genserver/: .gitignore  README.md  mix.exs
elixir/harikari_genserver/config/: config.exs
elixir/harikari_genserver/lib/harikari/: application.ex
elixir/harikari_genserver/test/: harikari_test.exs
js/flow_implicit_any/: package.json
js/transitive_deps_npm/: package-lock.json  package.json
rust/cycle_and_fuse/: Cargo.toml
rust/extension_traits/src/: main.rs
rust/serde-byte-test/: .gitignore  Cargo.toml  cachegrind.out.816248  cachegrind.out.816249
rust/serde-byte-test/src/: main.rs
rust/tokio-server-test/: Cargo.toml  perf.data  perf.data.old
rust/tokio-server-test/src/: main.rs
shell/: brute_force_primes.sh  negate_cond.sh
